--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.13.0",
+    "react-router-dom": "^6.26.0",
     "react-spring": "^9.7.4",
     "uikit": "^3.21.8"
   },
